# esp32-home

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs
esp32-device/: .rustfmt.toml  Cargo.toml  README.md  flash-epulse-no-print.sh  flash-epulse.sh  flash-ez.sh  listen.sh  setup-dev.sh
esp32-device/.cargo/: config.toml
esp32-device/src/: dht20.rs  main.rs  test.rs  test_ez.rs  transmitter.rs  transmitter_deep_sleep.rs
pi-gateway/: Cargo.toml  deploy.yaml  hosts
pi-gateway/src/: main.rs
src/: main.rs
