[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1.0.8"
serde = { version = "1.0.*", default-features = false }
uom = { version = "0.36.0", default-features = false, features = ["u16", "si", "serde"] }
